<resources>
    <string name="app_name">Luma</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="error_username_short">Username must be at least 3 characters</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_email_invalid">Invalid email format</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_short">Password must be at least 8 characters</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="credential_not_match">The credentials you entered don’t match our records. Please try again.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome back! Let’s continue your story.</string>
    <string name="label_no_account">Don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_register">Join Luma and start sharing your calm stories.</string>
    <string name="label_have_account">Already have an account?</string>
    <string name="detail_image">Detail Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="hint_description">Description</string>
    <string name="button_upload">Upload Story</string>
    <string name="new_story_title">New Story</string>
    <string name="retry_button">Retry</string>
    <string name="carousel_event_banner">Carousel Event Banner</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="more_stories">More Stories</string>
    <string name="story_image">Story image</string>
    <string name="upload_story_failed">Oops! We couldn’t upload your story. Try again in a moment.</string>
    <string name="upload_story_image_error">You haven’t added a photo yet. Capture or choose one before uploading!</string>
    <string name="upload_story_desc_error">You haven\'t added a description yet. Please fill it in first!</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch camera</string>
    <string name="button_create">Button Create Story</string>
    <string name="settings_title">Settings</string>
    <string name="theme_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="language_hint">Switch between Bahasa and English</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="location_input">Location input</string>
    <string name="favorite">Favorite</string>
    <string name="empty_favorite_message">No favorite stories found</string>
    <string name="set_favorite">set favorite</string>
    <string name="maps_view">Maps View</string>
    <string name="button_menu_fab">Button menu fab</string>
</resources>