<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.feature.auth.fragments.RegisterFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/register_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        app:srcCompat="@drawable/luma_logo_trp" />


    <TextView
        android:id="@+id/tv_register_title"
        style="@style/TextAppearance.Luma.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_logo" />


    <TextView
        android:id="@+id/tv_register_subtitle"
        style="@style/TextAppearance.Luma.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_register"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title" />


    <com.halimjr11.luma.ui.components.LumaInputField
        android:id="@+id/ed_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:hintText="@string/hint_username"
        app:inputTypeMode="username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_subtitle" />


    <com.halimjr11.luma.ui.components.LumaInputField
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintText="@string/hint_email"
        app:inputTypeMode="email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name" />


    <com.halimjr11.luma.ui.components.LumaInputField
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintText="@string/hint_password"
        app:inputTypeMode="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password" />


    <TextView
        android:id="@+id/tv_have_account"
        style="@style/TextAppearance.Luma.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_have_account"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

    <TextView
        android:id="@+id/btn_to_login"
        style="@style/TextAppearance.Luma.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/tv_have_account"
        app:layout_constraintStart_toEndOf="@id/tv_have_account"
        app:layout_constraintTop_toTopOf="@id/tv_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>
