<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.feature.settings.SettingsActivity">

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Theme Switch -->
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:text="@string/theme_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title"
        app:thumbIcon="@drawable/ic_sun"
        app:thumbIconTint="@null"
        app:thumbTint="?attr/colorOnSurface" />

    <!-- Language Switch -->
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="@string/language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_theme"
        app:thumbIcon="@drawable/ic_english"
        app:thumbIconTint="@null"
        app:thumbTint="?attr/colorOnSurface" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_hint"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintStart_toStartOf="@id/switch_language"
        app:layout_constraintTop_toBottomOf="@id/switch_language" />

</androidx.constraintlayout.widget.ConstraintLayout>
